test/files/neg/t6567.check
t6567.scala:10: warning: Suspicious application of an implicit view (Test.this.a2b) in the argument to Option.apply.
  Option[B](a)
           ^
t6567.scala:12: warning: Suspicious application of an implicit view (Test.this.a2b) in the argument to Option.apply.
  val b: Option[B] = Option(a)
                           ^
warning: 1 feature warning; re-run with -feature for details
3 warnings
error: No warnings can be incurred under -Werror.
